# API-workshop

./: .gitignore  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_main.py  testes.py
.github/workflows/: main.yml
app/: data.py  database.py  main.py  model.py  routers.py  schema.py
tests/: test_main.py
