[project]
name = "api-workshop"
version = "0.1.0"
description = ""
authors = [
    {name = "Renato-Tecpel",email = "renatolmb@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "taskipy (>=1.14.1,<2.0.0)",
    "pytest (>=8.3.5,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]

run = "uvicorn main:app --reload"
test = "pytest -v"
kill = "kill -9 $(lsof -t -i:8000)"

[tool.poetry.group.dev.dependencies]
httpx = "^0.28.1"

